service服务的应用

--- a/angulardemo02/说明.md
+++ b/angulardemo02/说明.md
@@ -1,2 +1,5 @@
 要使用ngModel指令，必须在app.module.ts 里面引入FormsModule
 然后在ngModule装饰器的imports里面引入FormsModule
+
+创建服务service到指定目录：ng g service services/storage
+app.modules 引入并声明(providers里面)服务
