angular内置模块实现数据请求

--- a/angulardemo04/说明.md
+++ b/angulardemo04/说明.md
@@ -30,3 +30,39 @@ Rxjs是使用observables的响应式变成库
       console.log('Clicked')
     })
 
+
+angular模块请求数据get：
+  1.引入模块
+  import { HttpClientModule } from '@angular/common/http';
+  2.NgModule装饰器里面引入
+    imports: [
+      HttpClientModule
+    ],
+  3.组件里面引入
+    import { HttpClient } from '@angular/common/http';
+  4.构造函数里声明
+    constructor(public http:HttpClient) { }
+  5.使用
+    this.http.get(api).subscribe((data:any) => {
+      console.dir(data)
+    })
+angular模块请求数据post:
+  1.引入模块
+  import { HttpClient, HttpHeaders } from '@angular/common/http';
+  2.需要手动设置请求头
+    const httpHead = {headers: new HttpHeaders({'Content-Type':'application/json'})}
+  3.使用
+    this.http.post(api,{'name':'google', 'url': 'www.google.com'}, httpHead).subscribe(data => {
+      console.dir(data)
+    })
+angular使用jsonp:
+  1.引入
+    import { HttpClientJsonpModule } from '@angular/common/http';
+  2.NgModule装饰器里面引入
+    imports: [
+      HttpClientJsonpModule
+    ],
+  3.调用方法
+    this.http.jsonp(api, 'callback').subscribe((res:any) => {
+      console.dir(res)
+    })
