--- a/angulardemo05/说明.md
+++ b/angulardemo05/说明.md
@@ -53,4 +53,21 @@ const routes: Routes = [
       fragment: 'anchor'
     }
     this.route.navigate(['/newsDetail'],navE)
-
+7.嵌套路由
+    a.配置
+    children: [
+      {
+        path:'child1',
+        component: Child1Component
+      },
+      {
+        path:'child2',
+        component: Child2Component
+      },
+      {
+        path: '**',
+        redirectTo: 'child1'
+      },
+    ]
+    b.其它和平级路由一样设置，跳转链接的时候需要写全路由链接(包含父组件的路由)
+    [routerLink]="['/childRouter/child1']"
